--- a/SignUp.html
+++ b/SignUp.html
@@ -7,47 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#f6f8fb; --ink:#0f172a; --muted:#6b7280; --primary:#0b1320; --border:#e5e7eb; --dash:#c084fc;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif;color:var(--ink);background:var(--bg)}
-
-    .frame{margin:22px;border:3px solid #111827;border-radius:12px;background:#fff;min-height:calc(100vh - 44px);display:flex;flex-direction:column}
-    .nav{display:flex;align-items:center;gap:24px;padding:10px 16px;border-bottom:1px solid var(--border)}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:800}
-    .brand .logo{width:26px;height:26px;border:2px solid #111827;border-radius:50%;display:grid;place-items:center;font-size:14px;font-weight:800}
-    .links{display:flex;gap:22px;margin-left:14px;font-size:13px;color:#111827}
-    .links a{color:inherit;text-decoration:none;opacity:.9}
-    .links a:hover{opacity:1}
-    .spacer{flex:1}
-    .auth{display:flex;gap:10px}
-    .btn{font-size:12px;padding:6px 12px;border:1px solid #111827;border-radius:8px;background:#fff;cursor:pointer}
-    .btn.primary{background:#0f172a;color:#fff;border-color:#0f172a}
-
-    .stage{flex:1;display:grid;place-items:center;padding:40px}
-    .card-wrap{width:min(980px,92vw);border:1px solid var(--border);border-radius:10px;background:#fff;padding:60px 40px;display:grid;place-items:center}
-
-    h1{margin:0 0 22px 0;font-size:36px;text-align:center;font-weight:800}
-
-    .signup-card{width:min(560px,95%);padding:26px 28px 34px;border:2px dashed var(--dash);border-radius:10px}
-    label{display:block;font-size:12px;color:#6b7280;margin:12px 0 6px}
-    input,select{width:100%;height:36px;border:1px solid #cbd5e1;border-radius:4px;padding:0 10px;font-size:13px;outline:none;background:#f9fafb}
-    input:focus,select:focus{border-color:#111827;background:#fff}
-
-    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:14px}
-
-    .submit-btn{width:220px;height:34px;border-radius:6px;border:0;background:#0f172a;color:#fff;font-weight:600;display:block;margin:16px auto 0;cursor:pointer}
-
-    @media (max-width:720px){
-      .links{display:none}
-      .frame{margin:0;border-radius:0;border-width:0}
-      .card-wrap{padding:40px 16px}
-      .grid-2{grid-template-columns:1fr}
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="frame">
