Navegación entre Login y Signup

--- a/login_page.html
+++ b/login_page.html
@@ -23,7 +23,7 @@
       </nav>
       <div class="spacer"></div>
       <div class="auth">
-        <button class="btn">Sign Up</button>
+        <a href="SignUp.html" class="btn">Sign Up</a>
         <button class="btn primary">Log In</button>
       </div>
     </header>
