--- a/SignUp.html
+++ b/SignUp.html
@@ -26,7 +26,7 @@
       <div class="spacer"></div>
       <div class="auth">
         <button class="btn">Sign Up</button>
-        <button class="btn primary">Log In</button>
+        <a href="login_page.html" class="btn primary">Log In</a>
       </div>
     </header>
 
