--- a/About-Us.html
+++ b/About-Us.html
@@ -1,153 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>VEYRA – About</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    :root{--bg:#f6f8fb;--ink:#0f172a;--muted:#6b7280;--border:#e5e7eb;--primary:#0f172a;--dash:#c084fc}
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{margin:0;font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,"Helvetica Neue",Arial,"Noto Sans",sans-serif;color:var(--ink);background:var(--bg)}
-
-    .frame{margin:22px;border:3px solid #111827;border-radius:12px;background:#fff;min-height:calc(100vh - 44px);display:flex;flex-direction:column}
-
-    /* NAV */
-    .nav{display:flex;align-items:center;gap:22px;padding:10px 16px;border-bottom:1px solid var(--border)}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:800}
-    .brand .logo{width:26px;height:26px;border:2px solid #111827;border-radius:50%;display:grid;place-items:center;font-weight:800;font-size:14px}
-    .links{display:flex;gap:22px;margin-left:14px;font-size:13px}
-    .links a{color:inherit;text-decoration:none;opacity:.9}
-    .links a:hover{opacity:1}
-    .spacer{flex:1}
-    .meta{display:flex;align-items:center;gap:16px;font-size:13px;color:#111827}
-    .cart{width:20px;height:20px;border:1.5px solid #111827;border-radius:4px;display:grid;place-items:center}
-    .auth{display:flex;gap:10px}
-    .btn{font-size:12px;padding:6px 12px;border:1px solid #111827;border-radius:8px;background:#fff;cursor:pointer}
-    .btn.primary{background:#0f172a;color:#fff;border-color:#0f172a}
-
-    /* Sections wrapper */
-    .section{border:1px solid var(--border);border-radius:10px;background:#fff;margin:18px 16px;padding:32px}
-
-    /* HERO */
-    .hero{display:grid;place-items:center;text-align:center;padding:52px 18px}
-    .hero .inner{width:min(760px,92vw)}
-    .hero h1{margin:0 0 14px 0;font-size:28px;font-weight:800}
-    .hero p{margin:0 auto 18px auto;line-height:1.55;color:#111827;font-size:13px;opacity:.9}
-    .hero .actions{display:flex;gap:10px;justify-content:center}
-    .chip{padding:8px 14px;border-radius:8px;border:1px solid #111827;background:#0f172a;color:#fff;font-size:12px}
-    .chip.ghost{background:#fff;color:#111827}
-
-    /* Upcoming */
-    .heading{font-weight:700;text-align:center;margin:0 0 18px 0}
-    .image-lg{width:100%;height:160px;border:1px solid #cbd5e1;border-radius:8px;display:grid;place-items:center;background:#fafafa}
-    .ph{width:48px;height:32px;border:2px solid #d1d5db;border-radius:6px;display:inline-grid;place-items:center;position:relative}
-    .ph:after{content:"";position:absolute;width:18px;height:10px;border:2px solid #d1d5db;border-top:none;border-right:none;transform:rotate(-20deg);bottom:8px;right:6px}
-
-    /* Impact grid */
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
-    .card{border:1px solid var(--border);border-radius:10px;padding:16px;background:#fff}
-    .image-sm{height:90px;border:1px dashed var(--dash);border-radius:8px;display:grid;place-items:center;background:#fafafa;margin-bottom:12px}
-    .card h4{margin:0 0 8px 0;font-size:13px}
-    .card p{margin:0;font-size:12px;color:#374151;line-height:1.55}
-
-    .arrow-col{display:flex;align-items:center;justify-content:center}
-    .arrow{width:36px;height:2px;background:#111827;position:relative;border-radius:2px}
-    .arrow:after{content:"";position:absolute;right:-2px;top:-4px;width:8px;height:8px;border-right:2px solid #111827;border-top:2px solid #111827;transform:rotate(45deg)}
-
-    /* Footer strip */
-    .strip{border:1px solid #111827;border-radius:8px;padding:10px 14px;text-align:center;font-weight:600}
-
-    @media (max-width:980px){
-      .grid{grid-template-columns:1fr}
-      .arrow-col{display:none}
-    }
-    @media (max-width:720px){
-      .links{display:none}
-      .frame{margin:0;border:0;border-radius:0}
-      .section{margin:16px 12px}
-    }
-  </style>
-</head>
-<body>
-  <div class="frame">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Learn about VEYRA - sustainable fashion brand from Colombia focused on community impact and environmental responsibility" />
+    <meta name="keywords" content="VEYRA, sustainable fashion, Colombia, community impact, environmental responsibility" />
+    <meta name="author" content="VEYRA Team" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="About VEYRA - Sustainable Fashion" />
+    <meta property="og:description" content="Learn about VEYRA's mission for sustainable fashion and community impact" />
+    <meta property="og:type" content="website" />
+    <title>VEYRA – About</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="canonical" href="About-Us.html" />
+  </head>
+  <body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <div class="frame">
     <header class="nav">
-      <div class="brand"><div class="logo">V</div><div>VEYRA</div></div>
-      <nav class="links" aria-label="Primary">
-        <a href="#">About Us</a>
-        <a href="#">Explore seeds</a>
-        <a href="#">Community</a>
-        <a href="#">Products</a>
-        <a href="#">Publications/Media</a>
-      </nav>
+             <div class="brand"><div class="logo">V</div></div>
+             <nav class="links" aria-label="Primary">
+         <a href="About-Us.html">About Us</a>
+         <a href="#">Explore seeds</a>
+         <a href="#">Community</a>
+         <a href="#">Products</a>
+         <a href="#">Publications/Media</a>
+       </nav>
       <div class="spacer"></div>
-      <div class="meta">
-        <span>workshop@veyra.org</span>
-        <div class="cart" aria-label="Cart">🛒</div>
-      </div>
+      <div class="meta"></div>
       <div class="auth">
-        <button class="btn">Sign Up</button>
-        <button class="btn primary">Login</button>
+        <a href="SignUp.html" class="btn" role="button">Sign Up</a>
+        <a href="login_page.html" class="btn primary" role="button">Login</a>
       </div>
     </header>
 
-    <!-- HERO ABOUT -->
-    <section class="section hero">
-      <div class="inner">
-        <h1>About VEYRA</h1>
-        <p>
-          At VEYRA, we believe clothing is more than fashion — it's identity, expression, and purpose.
-          Born in Colombia, we design timeless pieces that benefit both communities and environments. Our production focuses on sustainability, garment aftercare, fair labor conditions, circularity, and community impact. Wear VEYRA — wear meaning.
-        </p>
-        <div class="actions">
-          <button class="chip">Shop now</button>
-          <button class="chip ghost">Get involved</button>
-        </div>
-      </div>
-    </section>
+         <!-- MAIN CONTENT -->
+     <main class="stage" id="main-content">
+             <!-- HERO ABOUT -->
+       <section class="card-wrap" aria-labelledby="about-title">
+         <h1 id="about-title">About VEYRA</h1>
+         <div class="signup-card">
+           <p>
+             At VEYRA, we believe clothing is more than fashion — it's identity, expression, and purpose.
+             Born in Colombia, we design timeless pieces that benefit both communities and environments. Our production focuses on sustainability, garment aftercare, fair labor conditions, circularity, and community impact. Wear VEYRA — wear meaning.
+           </p>
+           <div class="actions">
+             <a href="#" class="btn" role="button" aria-label="Ir a la tienda">Shop now</a>
+             <a href="#" class="btn primary" role="button" aria-label="Involucrarse con VEYRA">Get involved</a>
+           </div>
+         </div>
+       </section>
 
-    <!-- UPCOMING EVENTS -->
-    <section class="section">
-      <h3 class="heading">Upcoming Events</h3>
-      <div class="image-lg"><div class="ph"></div></div>
-    </section>
+             <!-- UPCOMING EVENTS -->
+       <section class="card-wrap" aria-labelledby="events-title">
+         <h2 id="events-title">Upcoming Events</h2>
+         <div class="signup-card">
+           <div class="image-placeholder" aria-label="Imagen de eventos próximos">
+             <div class="ph" role="img" aria-label="Calendario">📅</div>
+           </div>
+         </div>
+       </section>
 
-    <!-- DATA IMPACT -->
-    <section class="section">
-      <h3 class="heading">Data impact in community</h3>
-      <div class="grid">
-        <article class="card">
-          <div class="image-sm"><div class="ph"></div></div>
-          <h4>Sustainable Materials Community</h4>
-          <p>
-            We collaborate with science-backed textile suppliers and artisans to replace plastics and toxic chemicals with regenerative fibers. Each collection is a step toward a circular planet.
-          </p>
-        </article>
-        <article class="card">
-          <div class="image-sm"><div class="ph"></div></div>
-          <h4>Local Artisans & Makers Network</h4>
-          <p>
-            Production includes skilled craftspersons from nearby communities. We guarantee fair wages, safe workplaces, and traceable supply chains that strengthen local economies.
-          </p>
-        </article>
-        <article class="card">
-          <div class="image-sm"><div class="ph"></div></div>
-          <h4>Youth Employment & Training Program</h4>
-          <p>
-            We invest in young professionals by offering apprenticeships and training for cutting, sewing, and quality control—building skills for careers in responsible fashion.
-          </p>
-        </article>
-        <div class="arrow-col"><div class="arrow" aria-hidden="true"></div></div>
-      </div>
-    </section>
+       <!-- DATA IMPACT -->
+       <section class="card-wrap" aria-labelledby="impact-title">
+         <h2 id="impact-title">Data impact in community</h2>
+         <div class="grid-3" role="list">
+           <article class="card" role="listitem">
+             <div class="image-placeholder" aria-label="Imagen de materiales sostenibles">
+               <div class="ph" role="img" aria-label="Planta creciendo">🌱</div>
+             </div>
+             <h3>Sustainable Materials Community</h3>
+             <p>
+               We collaborate with science-backed textile suppliers and artisans to replace plastics and toxic chemicals with regenerative fibers. Each collection is a step toward a circular planet.
+             </p>
+           </article>
+           <article class="card" role="listitem">
+             <div class="image-placeholder" aria-label="Imagen de artesanos locales">
+               <div class="ph" role="img" aria-label="Grupo de personas">👥</div>
+             </div>
+             <h3>Local Artisans & Makers Network</h3>
+             <p>
+               Production includes skilled craftspersons from nearby communities. We guarantee fair wages, safe workplaces, and traceable supply chains that strengthen local economies.
+             </p>
+           </article>
+           <article class="card" role="listitem">
+             <div class="image-placeholder" aria-label="Imagen de programa de empleo juvenil">
+               <div class="ph" role="img" aria-label="Graduación">🎓</div>
+             </div>
+             <h3>Youth Employment & Training Program</h3>
+             <p>
+               We invest in young professionals by offering apprenticeships and training for cutting, sewing, and quality control—building skills for careers in responsible fashion.
+             </p>
+           </article>
+         </div>
+       </section>
 
-    <!-- ORGANIZATION DETAILS STRIP -->
-    <section class="section">
-      <div class="strip">organization details</div>
-    </section>
-  </div>
-</body>
+             <!-- ORGANIZATION DETAILS STRIP -->
+       <section class="card-wrap" aria-labelledby="org-details-title">
+         <div class="signup-card">
+           <div class="text-center">
+             <h2 id="org-details-title" class="visually-hidden">Organization details</h2>
+             <strong>Organization details</strong>
+           </div>
+         </div>
+       </section>
+         </main>
+   </div>
+
+   <script>
+     // Marcar el enlace "About Us" como activo
+     document.addEventListener('DOMContentLoaded', function() {
+       const aboutUsLink = document.querySelector('a[href="About-Us.html"]');
+       if (aboutUsLink) {
+         aboutUsLink.classList.add('active');
+       }
+     });
+   </script>
+ </body>
 </html>
