Products conectado con las páginas

--- a/SignUp.html
+++ b/SignUp.html
@@ -26,7 +26,7 @@
          <a href="About-Us.html">About Us</a>
          <a href="#">Explore seeds</a>
          <a href="#">Community</a>
-         <a href="#">Products</a>
+         <a href="Products.html">Products</a>
          <a href="#">Publications/Media</a>
        </nav>
       <div class="spacer"></div>
