--- a/SignUp.html
+++ b/SignUp.html
@@ -24,9 +24,9 @@
        </div>
              <nav class="links" aria-label="Primary">
          <a href="About-Us.html">About Us</a>
-         <a href="#">Explore seeds</a>
+         <a href="Explore-seeds.html">Explore seeds</a>
          <a href="#">Community</a>
-         <a href="#">Products</a>
+         <a href="Products.html">Products</a>
          <a href="#">Publications/Media</a>
        </nav>
       <div class="spacer"></div>
