--- a/Explore-seeds.html
+++ b/Explore-seeds.html
@@ -78,7 +78,7 @@
             </div>
             <nav class="links" aria-label="Primary">
                 <a href="About-Us.html">About Us</a>
-                <a href="Explore-seeds.html">Explore seeds</a>
+                <a href="Explore-seeds.html">Explore events</a>
                 <a href="#">Community</a>
                 <a href="Products.html">Products</a>
                 <a href="#">Publications/Media</a>
